--- a/lp01.md
+++ b/lp01.md
@@ -5,4 +5,4 @@ El niño huerfano **Larry** vive con sus tios, que le tratan bastante mal.
 
 Tiene unas *Google Glasses* redondas y una cicatriz de un *USB* en la frente
 
-
+Un dia aparece *Neo* y le hace hacer hacker
