Completo resumen del libro 2

--- a/lp02.md
+++ b/lp02.md
@@ -5,3 +5,5 @@ virus contra el que **Larry** y sus amigos deberan luchar.
 
 En esta aventura **Larry** se enterará de nuevos detalles sobre su destino.
 
+Como el malvado hacker **Ballmermort** le metió un troyano,
+en su propio codigo podría esconderse malware.
